Firefox issue resolved, vertical alignment now correct

--- a/dev-app/src/app/components/ngTextRoll/ngtextroll.css
+++ b/dev-app/src/app/components/ngTextRoll/ngtextroll.css
@@ -4,6 +4,7 @@
   display: inline-flex;
   visibility: hidden;
   overflow-y: hidden;
+  overflow: -moz-hidden-unscrollable;
 }
 #ng-text-roll .inner {
   position: relative;
